# r_and_d

./: .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py
doctype/r_and_d_calibration_log/: r_and_d_calibration_log.json  r_and_d_calibration_log.py
doctype/r_and_d_kpi/: r_and_d_kpi.json
doctype/r_and_d_lab_material/: r_and_d_lab_material.json
doctype/r_and_d_material_item/: r_and_d_material_item.py
doctype/r_and_d_material_request/: r_and_d_material_request.py
doctype/r_and_d_material_type/: r_and_d_material_type.py
doctype/r_and_d_result_entry/: r_and_d_result_entry.py
doctype/r_and_d_safety_record/: r_and_d_safety_record.json
doctype/r_and_d_sample/: r_and_d_sample.json
r_and_d/: __init__.py  commands.py  hooks.py  modules.txt  patches.txt
r_and_d/doctype/experiment_step_material/: experiment_step_material.py
r_and_d/doctype/r_and_d_kpi/: r_and_d_kpi.py
r_and_d/doctype/r_and_d_method_step/: __init__.py
r_and_d/doctype/r_and_d_parameter/: r_and_d_parameter.py
r_and_d/doctype/r_and_d_project_sample/: r_and_d_project_sample.json
r_and_d/doctype/r_and_d_result_entry/: r_and_d_result_entry.json
r_and_d/doctype/r_and_d_safety_record/: r_and_d_safety_record.py
r_and_d/doctype/r_and_d_sample/: r_and_d_sample.py
r_and_d/patches/: fix_missing_doctypes.py  rename_lab_material.py  restore_doctypes_final.py  v2_restore_doctypes.py  v3_sync_missing_doctypes.py
report/r_and_d_equipment_calibration/: r_and_d_equipment_calibration.json
report/r_and_d_experiment_results/: r_and_d_experiment_results.json
(+61 files in other folders)
